# AT_DYNAMIC_IES_PRACTICS

./: .env  .gitignore  TODO.txt  compose.yaml  docker-compose.yaml
config/at_configurator/: config.yaml  new_md_scenario.yaml  scenario.yaml  scenario_minimal.yaml  scenario_with_hints.yaml  test_scenario.yaml
config/at_postgres_db/: 01_init.sql
config/at_postgres_db_migrations/: apply.sh
config/at_postgres_migrations/: apply.sh
config/at_redis/: config.conf
docker/: Dockerfile.at_blackboard  Dockerfile.at_configurator  Dockerfile.at_controller  Dockerfile.at_joint  Dockerfile.at_krl_editor_api  Dockerfile.at_renderer  Dockerfile.at_simulation_api  Dockerfile.at_solver  Dockerfile.at_temporal_solver  Dockerfile.at_tutoring_skills_api
package/: pyproject.toml
package/dpractics/: Dockerfile
package/nginx/: conf.nginx
src/: config.yaml  scenario.yaml
