[tool.poetry]
name = "at-dpractics"
version = "0.1.0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
at-controller = {git = "https://github.com/grigandal625/AT_CONTROLLER.git", rev = "main"}
at-renderer = {git = "https://github.com/grigandal625/AT_RENDERER.git", rev = "main"}
at-configurator = {git = "https://github.com/grigandal625/AT_CONFIGURATOR.git", rev = "master"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
